116 Add Gradle support.